모바일환경 버그수정.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <div id="ui">
             <div id="instructions" class="desktop-only">방향키(↑↓←→)로 이동, 스페이스바로 점프</div>
             <div id="mobile-instructions" class="mobile-only">조이스틱으로 이동, 점프 버튼으로 점프</div>
-            <div id="music-hint">키보드나 화면을 터치하면 배경음악이 시작됩니다</div>
+            <div id="music-hint" class="music-hint">
+                <span>🎵 화면을 터치하면 배경음악이 시작됩니다</span>
+            </div>
         </div>
         <canvas id="gameCanvas"></canvas>
         
