모바일환경 개선

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <canvas id="gameCanvas"></canvas>
         
         <!-- 모바일 조이스틱 UI -->
-        <div id="mobile-controls" class="mobile-only">
+        <div id="mobile-controls" class="mobile-only force-mobile-debug">
             <!-- 조이스틱 -->
             <div id="joystick-container">
                 <div id="joystick-base">
