모바일환경개선

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
                     <span class="perf-label">렌더:</span>
                     <span id="render-info">--</span>
                 </div>
+                <div class="perf-item">
+                    <span class="perf-label">모바일:</span>
+                    <span id="mobile-status">--</span>
+                </div>
+            </div>
+            
+            <!-- 모바일 감지 디버그 정보 -->
+            <div id="mobile-debug" class="mobile-debug-info hidden">
+                <div class="debug-title">모바일 감지 상태</div>
+                <div id="debug-details">로딩 중...</div>
             </div>
         </div>
         <canvas id="gameCanvas"></canvas>
