모델 파일 최적화

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
                 <div id="debug-details">로딩 중...</div>
             </div>
             
+            <!-- 모델 로딩 진행률 표시 -->
+            <div id="model-loading">
+                <div class="loading-text">🎭 고품질 모델 로딩 중...</div>
+                <div class="progress-bar">
+                    <div class="progress-fill" id="progress-fill"></div>
+                </div>
+                <div class="loading-details" id="loading-details">잠시만 기다려주세요</div>
+            </div>
+            
             <!-- 게임 통계 오버레이 -->
             <div id="game-stats" class="game-stats">
                 <div class="stats-title">📊 게임 통계</div>
